fix (sections whitespace): correct whitespace

--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -12,10 +12,6 @@
   }
 }
 
-.home .section {
-  height: 100%;
-}
-
 .section + .section {
   padding-top: 19vh;
 }
