--- a/src/components/PlanNews/styles.css
+++ b/src/components/PlanNews/styles.css
@@ -1,7 +1,6 @@
 .plan-news {
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 .plan-news .header {
   display: flex;
